[package]
name = "feed-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
byteorder = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "book_update"
harness = false

[[example]]
name = "feed_generator"
path = "examples/feed_generator.rs"
